ml-service/deployment-ml-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-service
  namespace: kubeflow-user-example-com
  labels:
    app: ml-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ml-service
  template:
    metadata:
      labels:
        app: ml-service
    spec:
      nodeSelector:
        node-type: ml-gpu
        gpu-role: serving
      tolerations:
        - key: "nvidia.com/gpu"
          value: "present"
          effect: "NoSchedule"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: ml-service
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - ml-service
                topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: kcr-pull-secret
      containers:
        - name: ml-service
          image: kc-sfacspace.kr-central-2.kcr.dev/team1-repo/ml-service:40dc77c2f6026b0e0ce8c28a70de23b9aa8546ce
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "8Gi"
              cpu: "3"
              nvidia.com/gpu: "1"
            limits:
              memory: "16Gi"
              cpu: "4"
              nvidia.com/gpu: "1"
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 5
          workingDir: /app
          command: [ "/bin/sh","-lc" ]
          args:
            - >
              echo "PYTHONPATH=$PYTHONPATH";
              python -c "import sys; print('sys.path:', sys.path[:3])";
              exec python -m uvicorn src.api.app:app --host 0.0.0.0 --port 8001
          volumeMounts:
            - name: ml-service
              mountPath: /root
            - name: sitepkgs-local
              mountPath: /opt/sitepkgs

      volumes:
        - name: ml-service
          persistentVolumeClaim:
            claimName: ml-service
        - name: sitepkgs-local
          emptyDir: {}
